# spirit

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  Jamfile  Makefile.am  README-get_rhs-branch.md  README.md  appveyor.yml  build.jam  change_log.html  change_log.txt  index.html  module.cmake  toy.cpp
example/application/rfcdate/: Makefile.am  mystyle.xls  rfc-skipper.hpp  rfcdate-compile-test.cpp  rfcdate-parser.hpp  rfcdate-test.cpp  rfcskipper-compile-test.cpp  skipper-test.cpp  timestamp-compile-test.cpp  timestamp.hpp  tutorial.html  tutorial.xml
example/application/slex/: Makefile.am  README  callback.cpp  lexer.cpp  lexer.hpp  lextest.cpp
example/fundamental/: Makefile.am  ast_calc.cpp  bind.cpp  boiler_plate.cpp  calc_debug.cpp  calc_plain.cpp  comments.cpp  complex_number.cpp  dynamic_parser.cpp  error_handling.cpp  error_reporting.cpp  file_parser.cpp  full_calc.cpp  functor_parser.cpp  list_parser.cpp  matching_tags.cpp  no_actions.cpp  number_list.cpp  parameters.cpp  parse_tree_calc1.cpp  parser_context.cpp  phoenix_calc.cpp  polynomial.cpp  refactoring.cpp  regex_convert.cpp  regular_expression.cpp  rfc821.cpp  roman_numerals.cpp  spirit_bind.cpp  stuff_vector.cpp  stuff_vector2.cpp  subrule_calc.cpp  sum.cpp  thousand_separated.cpp
phoenix/test/: Jamfile  Makefile.am  binary_tests.cpp  binders_tests.cpp  functors_tests.cpp  iostream_tests.cpp  mixed_binary_tests.cpp  more_expressions_tests.cpp  new_test.cpp  primitives_tests.cpp  statements_tests.cpp  stl_tests.cpp  tuples_tests.cpp  unary_tests.cpp
test/: .gitignore  CMakeLists.txt  Jamfile  Jamfile.v2  Makefile.am  actions_tests.cpp  ast_calc_tests.cpp  bug_000001.cpp  bug_000002.cpp  bug_000003.cpp  bug_000004.cpp  bug_000005.cpp  bug_000006.cpp  bug_000007.cpp  bug_000008.cpp  bug_fixes.cpp  char_strings_test.cpp  char_strings_test_fail.cpp  chset_tests.cpp  closure_tests.cpp  composite_tests.cpp  confix_tests.cpp  custom_real_parser.cpp  directives_tests.cpp  distinct_tests.cpp  epsilon_tests.cpp  escape_char_parser_tests.cpp  exception_tests.cpp  file_iterator_tests.cpp  fixed_size_queue_fail_tests.cpp  fixed_size_queue_tests.cpp  for_p_as_parser_tests.cpp  for_tests.cpp  fundamental_tests.cpp  grammar_def_test.cpp  grammar_mt_tests.cpp  grammar_multi_instance_tests.cpp  grammar_multi_instance_tst.cpp  grammar_tests.cpp  group_match_bug.cpp  (+49 more)
test/actor/: action_tests.cpp  action_tests.hpp  assign_key_test.cpp  assign_test.cpp  clear_test.cpp  decrement_test.cpp  erase_at_test.cpp  increment_test.cpp  insert_at_test.cpp  insert_key_test.cpp  push_back_test.cpp  push_front_test.cpp  swap_test.cpp  unit_test.cpp
test/impl/: Makefile.am  sstream.hpp  string_length.hpp  unit_test.ipp  util.ipp  var.hpp
test/karma/: Jamfile  actions.cpp  alternative.cpp  alternative1.cpp  alternative2.cpp  and_attribute.cpp  and_predicate.cpp  attribute.cpp  auto.cpp  auto.hpp  auto1.cpp  binary.cpp  binary1.cpp  binary2.cpp  binary3.cpp  bool.cpp  buffer.cpp  case_handling.cpp  case_handling1.cpp  case_handling2.cpp  case_handling3.cpp  center_alignment.cpp  char.cpp  char1.cpp  char2.cpp  char3.cpp  char_class.cpp  columns.cpp  debug.cpp  delimiter.cpp  duplicate.cpp  encoding.cpp  eol.cpp  eps.cpp  format_manip.cpp  format_manip_attr.cpp  format_pointer_container.cpp  functor.cpp  generate_attr.cpp  grammar.cpp  (+62 more)
test/lex/: Jamfile  auto_switch_lexerstate.cpp  dedent_handling_phoenix.cpp  id_type_enum.cpp  lexer_state_switcher.cpp  lexertl1.cpp  lexertl2.cpp  lexertl3.cpp  lexertl4.cpp  lexertl5.cpp  matlib.h  plain_token.cpp  regression001.cpp  regression002.cpp  regression003.cpp  regression003_generate.cpp  regression003_generate_switch.cpp  regression003_switch.cpp  regression004.cpp  regression005.cpp  regression007.cpp  regression008.cpp  regression009.cpp  regression010.cpp  regression_basic_lexer.cpp  regression_file_iterator1.cpp  regression_file_iterator2.cpp  regression_file_iterator3.cpp  regression_file_iterator4.cpp  regression_less_8563.cpp  regression_matlib_generate.cpp  regression_matlib_generate_switch.cpp  regression_static_wide_6253.cpp  regression_syntax_error.cpp  regression_wide.cpp  regression_word_count.cpp  semantic_actions.cpp  set_token_value.cpp  set_token_value_phoenix.cpp  state_switcher.cpp  (+8 more)
test/qi/: Jamfile  actions.cpp  actions2.cpp  alternative.cpp  and_predicate.cpp  attr.cpp  attr_with_action.cpp  attribute.cpp  attribute1.cpp  attribute2.cpp  auto.cpp  binary.cpp  bool.cpp  bool.hpp  bool2.cpp  char.cpp  char1.cpp  char2.cpp  char_class.cpp  clear_test.cpp  debug.cpp  difference.cpp  encoding.cpp  end.cpp  eps.cpp  expect.cpp  expectd.cpp  extract_int.cpp  function.cpp  functor.cpp  grammar.cpp  grammar_fail.cpp  hold.cpp  if.hpp  int.cpp  int.hpp  int2.cpp  int3.cpp  kleene.cpp  lazy.cpp  (+72 more)
test/support/: Jamfile  char_encoding.cpp  hold_any.cpp  istream_iterator_basic.cpp  line_pos_iterator.cpp  regression_line_pos_iterator.cpp  regression_multi_pass_error_handler.cpp  regression_multi_pass_functor.cpp  regression_multi_pass_parse.cpp  regresssion_line_pos_iterator.cpp  unused_type.cpp  utree.cpp  utree_test.cpp
test/test_headers/: Jamfile  main.cpp  test.cpp
test/typeof_support/: actor_typeof.cpp  core_typeof.cpp  debug_typeof.cpp  error_handling_typeof.cpp  iterator_typeof.cpp  tree_typeof.cpp  typeof_attribute.cpp  typeof_core.cpp  typeof_dynamic.cpp  typeof_error_handling.cpp  typeof_iterator.cpp  typeof_symbols.cpp  typeof_utility.cpp
test/x3/: Jamfile  actions.cpp  alternative.cpp  any_parser.cpp  attr.cpp  attribute_type_check.cpp  binary.cpp  bool.cpp  char1.cpp  char_class.cpp  confix.cpp  constexpr.cpp  container_support.cpp  debug.cpp  difference.cpp  eoi.cpp  eol.cpp  error_handler.cpp  error_handler_positions.cpp  expect.cpp  expect.ipp  expect_nothrow.cpp  expect_odr.cpp  expect_odr_nothrow.cpp  expect_odr_throw.cpp  expect_throw.cpp  extract_int.cpp  fusion_map.cpp  grammar.cpp  grammar.hpp  init_checker.hpp  int1.cpp  iterator_check.cpp  kleene.cpp  lexeme.cpp  list.cpp  lit.cpp  lit1.cpp  lit2.cpp  map_support.cpp  (+37 more)
test/x3/extensions/: seek.cpp  (+3 more)
(+3539 files in other folders)
